--- a/website/index.html
+++ b/website/index.html
@@ -320,8 +320,8 @@
 
     <script>
         // Configuration - UPDATE THESE VALUES
-        const GITHUB_OWNER = 'YOUR_USERNAME'; // Replace with your GitHub username
-        const GITHUB_REPO = 'whisper-speech-app'; // Replace with your repo name
+        const GITHUB_OWNER = 'suhanichawla'; // Replace with your GitHub username
+        const GITHUB_REPO = 'whisper-on-prem'; // Replace with your repo name
 
         // GitHub API URLs
         const GITHUB_API_URL = `https://api.github.com/repos/${GITHUB_OWNER}/${GITHUB_REPO}`;
